Moving error handling in a place that makes more sense
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,11 +5,8 @@ SET(shaman_SRCS ${shaman_adaptor_SRCS}
     main.cpp
     MainWindow.cpp
     Shaman.cpp
-#    AlpmHandler.cpp
     BuildingDialog.cpp
-#    callbacks.cpp
     configDialog.cpp
-#    ConfigurationParser.cpp
     EditPBuild.cpp
     QueueDialog.cpp
     SysUpgradeDialog.cpp
@@ -28,6 +25,7 @@ SET(shaman_SRCS ${shaman_adaptor_SRCS}
     ShamanTreeWidgetItem.cpp
     MaintenanceBar.cpp
     LocalPackageDialog.cpp
+    ErrorHandler.cpp
 )
 
 SET(shaman_UIS
