A better icon management
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 SET(shaman_UIS
     MainWindow.ui
     aboutDialog.ui
@@ -23,9 +22,5 @@ SET(shaman_RESOUCES
 
 QT4_WRAP_UI(shaman_UIS_H ${shaman_UIS})
 
-INSTALL(CODE "MESSAGE(\"Installing Shaman Icons...\")")
-INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icons/shaman/shaman-32.png
-		${CMAKE_CURRENT_SOURCE_DIR}/icons/shaman/shaman-64.png
-		${CMAKE_CURRENT_SOURCE_DIR}/icons/shaman/shaman-128.png ${CMAKE_CURRENT_SOURCE_DIR}/icons/shaman/shaman-48.png
-		${CMAKE_CURRENT_SOURCE_DIR}/icons/shaman/application-x-shaman-package.png
-		DESTINATION ${CMAKE_INSTALL_PREFIX}/share/pixmaps)
+add_subdirectory(icons)
+
