--- a/etc/shaman.desktop
+++ b/etc/shaman.desktop
@@ -15,7 +15,7 @@ Comment[fr]=Un gestionnaire graphique de paquets pour Arch Linux
 
 MimeType=application/x-shaman-package;
 Exec=shaman
-Icon=shaman-32
+Icon=shaman
 Type=Application
 Terminal=false
 X-DBUS-StartupType=Single
