--- a/etc/shaman.conf
+++ b/etc/shaman.conf
@@ -11,6 +11,16 @@
     <allow receive_sender="org.archlinux.shaman"/>
     <allow receive_interface="org.archlinux.shaman"/>
 
+    <allow send_destination="org.archlinux.shaman"
+           send_interface="org.freedesktop.DBus.Introspectable"/>
+    <allow send_destination="org.archlinux.shaman"
+           send_interface="org.freedesktop.DBus.Properties" />
+
+    <allow send_destination="org.archlinux.shaman"
+           send_interface="org.archlinux.shaman"/>
+    <allow send_destination="org.archlinux.shaman"
+           send_interface="org.archlinux.shaman"/>
+
   </policy>
 
 </busconfig>
