--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,7 +82,7 @@ TARGET_LINK_LIBRARIES(shaman
     ${ALPM_LIBS}
     ${LIBARCHIVE_LIBS}
     ${POLKITQT_LIBRARIES}
-    aqpm
+    ${AQPM_LIBRARY}
 )
 
 if (KDE4_INTEGRATION)
