--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -1,15 +1,11 @@
+add_subdirectory(databases)
 
-SET(shaman_config_SRCS ${shaman_config_adaptor_SRCS}
-    DatabaseConfig.cpp
-    MirrorWidget.cpp
-    ServerWidget.cpp
-    ThirdPartyWidget.cpp
+
+SET(shaman_config_SRCS
+    ${shaman_config_databases_SRCS}
 )
 
 SET(shaman_config_UIS
-    databaseConfig.ui
-    mirrorWidget.ui
-    serverWidget.ui
-    thirdPartyWidget.ui
+    ${shaman_config_databases_UIS}
 )
 
