--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -1,11 +1,2 @@
 add_subdirectory(databases)
-
-
-SET(shaman_config_SRCS
-    ${shaman_config_databases_SRCS}
-)
-
-SET(shaman_config_UIS
-    ${shaman_config_databases_UIS}
-)
-
+add_subdirectory(aqpm)
