--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,6 +180,7 @@ INCLUDE_DIRECTORIES(
     ${CMAKE_CURRENT_BINARY_DIR}/src
     ${CMAKE_SOURCE_DIR}/src
     ${POLKITQT_INCLUDE_DIR}
+    ${KDE4_INCLUDES}
 )
 
 add_definitions (${QT_DEFINITIONS} ${QT_QTDBUS_DEFINITIONS} ${KDE4_DEFINITIONS})
