--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -1,2 +1,8 @@
 add_subdirectory(databases)
 add_subdirectory(aqpm)
+
+if (KDE4_INTEGRATION)
+
+install( FILES settings-package-management.desktop  DESTINATION  ${SERVICES_INSTALL_DIR} )
+
+endif (KDE4_INTEGRATION)
