That's the way it should be
Signed-off-by: Dario Freddi <drf@kde.org>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,7 +92,7 @@ TARGET_LINK_LIBRARIES(shaman
 )
 
 if (KDE4_INTEGRATION)
-target_link_libraries(shaman ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS})
+target_link_libraries(shaman ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_KUTILS_LIBS})
 endif (KDE4_INTEGRATION)
 
 INSTALL(CODE "MESSAGE(\"Installing Shaman executable...\")")
