--- a/src/config/aqpm/CMakeLists.txt
+++ b/src/config/aqpm/CMakeLists.txt
@@ -1,26 +1,26 @@
 if (KDE4_INTEGRATION)
-########### next target ###############
+    ########### next target ###############
 
-set(kcm_aqpm_PART_SRCS
-    AqpmConfig.cpp
-    ../../ShamanDialog.cpp
-    ../../ShamanIcon.cpp
-)
+    set(kcm_aqpm_PART_SRCS
+        AqpmConfig.cpp
+        ../../ShamanDialog.cpp
+        ../../ShamanIcon.cpp
+    )
 
-kde4_add_ui_files(kcm_aqpm_PART_SRCS
-    aqpmConfig.ui
-)
+    kde4_add_ui_files(kcm_aqpm_PART_SRCS
+        aqpmConfig.ui
+    )
 
-QT4_ADD_RESOURCES (qtsourceview_RC_SRCS  ../../../ui/shaman.qrc)
+    qt4_add_resources (qtsourceview_RC_SRCS  ../../../ui/shaman.qrc)
 
-kde4_add_plugin(kcm_aqpm ${kcm_aqpm_PART_SRCS} ${qtsourceview_RC_SRCS})
+    kde4_add_plugin(kcm_aqpm ${kcm_aqpm_PART_SRCS} ${qtsourceview_RC_SRCS})
 
-target_link_libraries(kcm_aqpm ${KDE4_KDEUI_LIBS} ${POLKITQT_LIBRARIES} ${AQPM_LIBRARY})
+    target_link_libraries(kcm_aqpm ${KDE4_KDEUI_LIBS} ${POLKITQT_LIBRARIES} ${AQPM_LIBRARY})
 
-install(TARGETS kcm_aqpm  DESTINATION ${PLUGIN_INSTALL_DIR} )
+    install(TARGETS kcm_aqpm  DESTINATION ${PLUGIN_INSTALL_DIR} )
 
-########### install files ###############
+    ########### install files ###############
 
-install( FILES kcmaqpm.desktop  DESTINATION  ${SERVICES_INSTALL_DIR} )
+    install( FILES kcmaqpm.desktop  DESTINATION  ${SERVICES_INSTALL_DIR} )
 
 endif (KDE4_INTEGRATION)
