--- a/src/config/settings-package-management.desktop
+++ b/src/config/settings-package-management.desktop
@@ -6,3 +6,4 @@ X-KDE-System-Settings-Parent-Category=computer-administration
 Icon=chakra-shiny
 
 Name=Package Management
+Name[pl]=Zarządzanie pakietami
