--- a/etc/shaman.desktop
+++ b/etc/shaman.desktop
@@ -6,12 +6,14 @@ GenericName[it]=Gestore di Pacchetti
 GenericName[de]=Paketverwaltung
 GenericName[es]=Administrador de Paquetes
 GenericName[fr]=Gestionnaire de paquets
+GenericName[pl]=Menedżer pakietów
 
 Comment=A Graphical Package Manager for ArchLinux
 Comment[it]=Un gestore di Pacchetti grafico per ArchLinux
 Comment[de]=Eine grafische Paketverwaltung für Arch Linux
 Comment[es]=Un administrador gráfico de paquetes para Arch Linux
 Comment[fr]=Un gestionnaire graphique de paquets pour Arch Linux
+Comment[pl]=Graficzny menedżer pakietów dla Arch Linuksa
 
 MimeType=application/x-shaman-package;
 Exec=shaman
