Increase version preparing for tag
Signed-off-by: Dario Freddi <drf@kde.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ endif(COMMAND cmake_policy)
 # Versioning
 set(MAJOR_SHAMAN_VERSION "1")
 set(MINOR_SHAMAN_VERSION "2")
-set(PATCH_SHAMAN_VERSION "71")
-set(ADDENDUM_SHAMAN_VERSION "")
+set(PATCH_SHAMAN_VERSION "80")
+set(ADDENDUM_SHAMAN_VERSION "(beta1)")
 set(SHAMAN_VERSION_STRING "${MAJOR_SHAMAN_VERSION}.${MINOR_SHAMAN_VERSION}.${PATCH_SHAMAN_VERSION}${ADDENDUM_SHAMAN_VERSION}")
 set(SHAMAN_VERSION_CODENAME "")
 set(SHAMAN_VERSION_REVISION "")
